...
    <string name="auto_color">color</string>
    <string name="auto_pago_de_sesion">Pago de sesión</string>
    <string name="auto_pago_completado_correctamente">Pago completado correctamente.</string>
    <string name="auto_procesando_pago_seguro_con">Procesando pago seguro con Stripe...</string>
    <string name="auto_preparando_pago_seguro">Preparando pago seguro...</string>
    <string name="auto_resumen_de_la_cita">Resumen de la cita</string>
    <string name="auto_observacion">Observación</string>
    <string name="auto_evolucion_emocional">Evolución emocional</string>
    <string name="auto_vista">Vista</string>
    <string name="auto_periodo">Periodo</string>
    <string name="auto_paciente">Paciente</string>
    <string name="auto_estadisticas_de_bienestar">Estadísticas de Bienestar</string>
    <string name="auto_solo_hay_una_entrada">Solo hay una entrada registrada en este periodo.</string>
    <string name="auto_este_paciente_no_tiene">Este paciente no tiene registros en el periodo seleccionado</string>
    <string name="auto_sin_datos_disponibles">Sin datos disponibles</string>
    <string name="auto__cancelar_cita">🗑️ Cancelar cita</string>
    <string name="auto__esta_accion_no">⚠️ Esta acción no se puede deshacer.</string>
    <string name="auto_cancelar_cita_1">Cancelar cita</string>
    <string name="auto_ingresa_un_monto_valido">Ingresa un monto válido</string>
    <string name="auto_ej_5000">Ej: 50.00</string>
    <string name="auto_estado_del_pago">Estado del pago</string>
...
